--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="MJnlBelry5Ymq6KCpGTMdrnPsHtUGVt6S4LrwJWWMr8" />
     <title>Quiz Buddy - Interactive Quiz Platform</title>
     <meta name="description" content="Create and host interactive quizzes with real-time gameplay, leaderboards, and engaging features." />
   </head>
